deployments/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  replicas: 3
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: searxng-settings
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
      volumes:
        - name: searxng-settings
          configMap:
            name: searxng-settings
---
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  namespace: default
spec:
  selector:
    app: searxng
  ports:
    - name: searxng-port
      port: 80
      targetPort: 8080
