deployments/searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`search.gyurus.hu`)
      kind: Rule
      services:
        - name: searxng-service
          port: 80
